--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,8 +25,10 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>专家：接下来6至12周将是大流行最黑暗时期</h3>
+<p>上周日（18日），美国明尼苏达大学传染病研究与政策中心主任奥斯特霍姆（Michael Osterholm）在NBC节目“与媒体见面”中警告，“接下来的6至12周将是整个大流行最黑暗的时期”。</p>
 <h3>英国博尔顿女议员染疫住院</h3>
-<p>英国大曼彻斯特地区博尔顿议会工党议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
+<p>英国大曼彻斯特地区博尔顿议会工党女议员亚斯敏·库雷希（Yasmin Qureshi），因感染了中共病毒而住进医院。</p>
 <p>库雷希周一（19日）在社交媒体上发布声明说，她两周前就开始感到自己病了，随后被确诊感染了中共病毒。上周六病情恶化后，她因肺炎住进医院。</p>
 <p><a name="_Toc2020101911"></a></p>
 <h3>比利时警告：疫情已失控 “海啸”逼近</h3>
@@ -218,7 +220,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/13/n10214588.md#1" target="_blank">刘晓：斯大林“文学总管”的自我毁灭</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/5/n10955771.md#1" target="_blank">林辉：携美资料返国 中国石油之父最终绝望</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
