--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -220,7 +220,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/5/n10955771.md#1" target="_blank">林辉：携美资料返国 中国石油之父最终绝望</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066862.md#1" target="_blank">智效民：著名物理学家饶毓泰的悲剧</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10993844.md#1" target="_blank">阅读《转法轮》 大洋洲法轮功学员谈感悟</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
