--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -220,7 +220,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066862.md#1" target="_blank">智效民：著名物理学家饶毓泰的悲剧</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10993844.md#1" target="_blank">阅读《转法轮》 大洋洲法轮功学员谈感悟</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/16/n10979189.md#1" target="_blank">共产暴政录：许世友文革中的暴行</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
